at the list of reviews, the onlick displays a new activity populated with the review data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.BookRater"
         tools:targetApi="31">
         <activity
+            android:name=".EditReview"
+            android:exported="false" />
+        <activity
             android:name=".ViewReviews"
             android:exported="false" />
         <activity
